samples/_failures_safe/1761288010_388618_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_348f5a48.c: In function ‘main’:
./samples/SAFE/__tmp_348f5a48.c:149:5: error: expected declaration or statement at end of input
  149 |     printf("Enter 'quit' to exit\n");
      |     ^~~~~~
